# tessa-cav26-ae

./: .gitignore  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  reproduce.mk  run_all.sh  sitecustomize.py
benchmarks/: convert_prism_to_jani.sh
benchmarks/herman/: herman-10.jani  herman-10.prism  herman-11.jani  herman-11.prism  herman-12.jani  herman-12.prism  herman-13-random-input.jani  herman-13-random-parametric.jani  herman-13.jani  herman-14.jani  herman-14.prism  herman-15.jani  herman-15.prism  herman-16.jani  herman-16.prism  herman-17-random-input.jani  herman-17-random-parametric.jani  herman-17.jani  herman-18.jani  herman-18.prism  herman-19-random-input.jani  herman-19.jani  herman-2.jani  herman-2.prism  herman-20.jani  herman-20.prism  herman-21.jani  herman-21.prism  herman-22.jani  herman-22.prism  herman-23.jani  herman-23.prism  herman-24.jani  herman-24.prism  herman-25.jani  herman-25.prism  herman-3.jani  herman-3.prism  herman-4.jani  herman-4.prism  (+10 more)
examples/: USAGE.md  complex_multi_action.jani  complex_multi_action.prism  weather_factory_3.jani  weather_factory_3.prism
nix/: dice.nix  dice.patch  gennifer.nix  mlcuddidl.nix  plot.nix  rubicon.nix  storm.nix  stormpy.nix  tessa.nix
src/: __init__.py  backend.py  benchmarks.py  cli.py  geni_runner.py  log_config.py  parser.py  postprocess.py  pretty_print.py  reachability.py  representation.py  rubicon_runner.py  timing.py
tests/: test_benchmarking.py  test_constants_override.py  test_explicit_backend.py  test_loaders.py  test_reachability.py  test_weather_factory_scaling.py
(+589 files in other folders)
